@@ -8,4 +8,4 @@ q_size = 1024
 uid = fapolicyd
 gid = fapolicyd
 details = 1
-
+db_max_size = 250
